tests/ui/const-generics/occurs-check/unused-substs-5.stderr
error[E0308]: mismatched types
  --> $DIR/unused-substs-5.rs:15:19
   |
LL |     x = q::<_, N>(x);
   |                   ^ cyclic type of infinite size

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
